--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -83,7 +83,7 @@
 		"async-mutex": "^0.4.0",
 		"bcryptjs": "2.4.3",
 		"blurhash": "2.0.5",
-		"bullmq": "4.4.0",
+		"bull": "4.10.4",
 		"cacheable-lookup": "7.0.0",
 		"cbor": "9.0.0",
 		"chalk": "5.3.0",
