--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -77,6 +77,8 @@
 		"@sinonjs/fake-timers": "10.3.0",
 		"@swc/cli": "0.1.62",
 		"@swc/core": "1.3.70",
+		"@types/unzipper": "0.10.6",
+		"@types/uuid": "9.0.2",
 		"accepts": "1.3.8",
 		"ajv": "8.12.0",
 		"archiver": "5.3.1",
@@ -156,6 +158,8 @@
 		"typeorm": "0.3.17",
 		"typescript": "5.1.6",
 		"ulid": "2.3.0",
+		"unzipper": "0.10.14",
+		"uuid": "9.0.0",
 		"vary": "1.1.2",
 		"web-push": "3.6.3",
 		"ws": "8.13.0",
