--- a/.github/workflows/check_copyright_year.yml
+++ b/.github/workflows/check_copyright_year.yml
@@ -3,8 +3,7 @@ name: Check copyright year
 on:
   push:
     branches:
-      - master
-      - develop
+      - steskey
 
 jobs:
   check_copyright_year:
