--- a/.github/workflows/test-frontend.yml
+++ b/.github/workflows/test-frontend.yml
@@ -29,7 +29,10 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'pnpm'
     - run: corepack enable
-    - run: pnpm i --frozen-lockfile
+    - if: github.event_name != 'pull_request'
+      run: pnpm i --frozen-lockfile
+    - if: github.event_name == 'pull_request'
+      run: pnpm i
     - name: Check pnpm-lock.yaml
       run: git diff --exit-code pnpm-lock.yaml
     - name: Copy Configure
