--- a/.github/workflows/test-frontend.yml
+++ b/.github/workflows/test-frontend.yml
@@ -32,7 +32,7 @@ jobs:
     - if: github.event_name != 'pull_request'
       run: pnpm i --frozen-lockfile
     - if: github.event_name == 'pull_request'
-      run: pnpm i
+      run: pnpm i --no-frozen-lockfile
     - name: Check pnpm-lock.yaml
       run: git diff --exit-code pnpm-lock.yaml
     - name: Copy Configure
