fix(ci): api report push only triggers on main (steskey) branch

--- a/.github/workflows/api-misskey-js.yml
+++ b/.github/workflows/api-misskey-js.yml
@@ -1,6 +1,10 @@
 name: API report (misskey.js)
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - steskey
+  pull_request:
 
 jobs:
   report:
