feat: only build frontend

--- a/package.json
+++ b/package.json
@@ -16,19 +16,10 @@
 		"build-pre": "node ./scripts/build-pre.js",
 		"build": "pnpm build-pre && pnpm -r build && pnpm gulp",
 		"build-storybook": "pnpm --filter frontend build-storybook",
-		"start": "pnpm check:connect && cd packages/backend && node ./built/boot/index.js",
-		"start:test": "cd packages/backend && cross-env NODE_ENV=test node ./built/boot/index.js",
-		"migrateandstart": "pnpm migrate && pnpm start",
 		"gulp": "pnpm exec gulp build",
 		"watch": "pnpm dev",
-		"dev": "node ./scripts/dev.mjs",
+		"dev": "cd packages/frontend && pnpm watch",
 		"lint": "pnpm -r lint",
-		"cy:open": "pnpm cypress open --browser --e2e --config-file=cypress.config.ts",
-		"cy:run": "pnpm cypress run",
-		"e2e": "pnpm start-server-and-test start:test http://localhost:61812 cy:run",
-		"jest": "cd packages/backend && pnpm jest",
-		"jest-and-coverage": "cd packages/backend && pnpm jest-and-coverage",
-		"test": "pnpm -r test",
 		"test-and-coverage": "pnpm -r test-and-coverage",
 		"format": "pnpm exec gulp format",
 		"clean": "node ./scripts/clean.js",
